--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,16 @@
       </div>
 
       <p id="greet-msg"></p>
+
+      
+      <div class="row">
+        <div>
+          <button id="get-config" type="button">Get config</button>
+        </div>
+      </div>
+
+      <p id="config-msg"></p>
+
     </div>
   </body>
 </html>
